fix the layer (z-index) bug

--- a/frontend/www/css/styles.less
+++ b/frontend/www/css/styles.less
@@ -29,7 +29,6 @@
 /* for blocks */
 .block {
 	position: absolute;
-	z-index: -99;
 	float: left;
 	background-color: #FFFFFF;
 	box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
